@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.3.0
 
+	- Empty functions in Fluid no longer create an
+	  implementation (STR #2259)
 	- Fixed Fluid dependency on X11 (STR #2261)
 	- Updated the bundled libpng to v1.2.40 (released Sep. 10, 2009)
 	- Fixed Fl_Choice contrast with light-on-dark settings (STR #2219)
